2004-07-09  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/uml2.gaphor: Added association UseCase <-> Property and
	Actor <-> Property, so associations can work right (there was no
	possible relationship possible between Actors and UseCases.
	* gaphor/ui/mainwindow.py: Added toolbox entries for usecase assoc.
	and metaclass.
	* gaphor/diagram/actions.py: Added UseCaseAssociation and MetaClass actions.
2004-07-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	Intermediate Windows Release 20040702

	* gaphor/ui/mainwindow.py: moved use case toolbox down.
	* gaphor/diagram/klass.py: fixed bug that prohibited popup menu
	from popping up.

2004-06-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/ui/mainwindow.py, gaphor/ui/toolbox.py: explicitly import
	actions.
	* doc/plugin.txt: explenation how plugins work
	* setup.py: Boost version to 0.5.0.

2004-06-22  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/plugin.py: new file. provided stuff needed by possible
	plugins.
	* gaphor/pluginmanager.py: new file. Plugin loading facility.
	* data/plugins/*: added (demo) plugin.
	* setup.py: reordered some code, so version.py is properly generated
	on FreeBSD.
	
2004-06-20  wrobell

	* gaphor/diagram/interface.py: - change look of interface depending
	on connected associations and implementations, nfy
	* gaphor/diagram/implementation.py: - change look into solid line
	when connected to folded interface   (InterfaceItem)

2004-06-17  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/klass.py: Made stereotypes work. Added a menu entry
	that allows the user to apply a stereotype to a class.
	* data/pixmaps/profile24.png: new icon for Profile.

2004-06-15  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/action.py: Added register_action_for_slot() and
	get_actions_for_slot().
	* gaphor/diagram/klass.py: added support for stereotypes.
	* gaphor/ui/mainwindow.py: added stereotype box