@@ -13,9 +13,9 @@ import gaphor.UML as UML
 from gaphor.diagram import initialize_item
 from nameditem import NamedItem
 
-def make_rounding(radius, edges, q=1):
+def make_arc(radius, edges, q=1):
     """Create a tupple of edges points, which represent a 90 degrees
-    rounding in the first quadrant
+    arc in the first quadrant
     """
     points = []
     sin = math.sin
@@ -26,17 +26,17 @@ def make_rounding(radius, edges, q=1):
         points.append((cos(n) * radius, sin(n) * radius))
     return points
 
-def alter_rounding(rounding, offsetx=0, offsety=0):
-    return [(x+offsetx, y+offsety) for x, y in rounding]
+def alter_arc(arc, offsetx=0, offsety=0):
+    return [(x+offsetx, y+offsety) for x, y in arc]
 
 class ActionItem(NamedItem):
     RADIUS = 15
     MARGIN_X = 40
     MARGIN_Y = 20
-    rounding_1 = make_rounding(radius=RADIUS, edges=10, q=0)
-    rounding_2 = make_rounding(radius=RADIUS, edges=10, q=1)
-    rounding_3 = make_rounding(radius=RADIUS, edges=10, q=2)
-    rounding_4 = make_rounding(radius=RADIUS, edges=10, q=3)
+    arc_1 = make_arc(radius=RADIUS, edges=10, q=0)
+    arc_2 = make_arc(radius=RADIUS, edges=10, q=1)
+    arc_3 = make_arc(radius=RADIUS, edges=10, q=2)
+    arc_4 = make_arc(radius=RADIUS, edges=10, q=3)
 
     def __init__(self, id=None):
         NamedItem.__init__(self, id)
@@ -57,10 +57,10 @@ class ActionItem(NamedItem):
         r = self.RADIUS
         h = self.height - r
         w = self.width - r
-        line = alter_rounding(self.rounding_1, offsetx=w, offsety=h) + \
-               alter_rounding(self.rounding_2, offsetx=r, offsety=h) + \
-               alter_rounding(self.rounding_3, offsetx=r, offsety=r) + \
-               alter_rounding(self.rounding_4, offsetx=w, offsety=r)
+        line = alter_arc(self.arc_1, offsetx=w, offsety=h) + \
+               alter_arc(self.arc_2, offsetx=r, offsety=h) + \
+               alter_arc(self.arc_3, offsetx=r, offsety=r) + \
+               alter_arc(self.arc_4, offsetx=w, offsety=r)
         self._border.line(line)
         self._border.set_cyclic(True)
         self.expand_bounds(1.0)
